trying out something

--- a/Pig-Game/index.html
+++ b/Pig-Game/index.html
@@ -8,7 +8,7 @@
         
         <title>Pig Game</title>
     </head>
-
+//trying push pull 
     <body>
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
